<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single"  >
        <item
            android:id="@+id/nav_main"
            android:title="@string/menu_main" />
        <item
            android:id="@+id/nav_history"
            android:title="@string/menu_history" />

        <item
            android:id="@+id/nav_about"
            android:layout_height="wrap_content"
            android:title="@string/menu_about" />
        <item
            android:id="@+id/nav_exit"
            android:title="@string/menu_exit" />
    </group>

    <item android:title="">
        <menu>

            <item
                android:id="@+id/nav_help"
                android:title="@string/menu_help" />
            <item
                android:id="@+id/nav_feedback"
                android:title="@string/menu_feedback" />
            <item
                android:id="@+id/nav_confident"
                android:title="@string/menu_confident" />
            <item
                android:id="@+id/nav_policy"
                android:title="@string/menu_policy" />
        </menu>
    </item>

</menu>
